Nearby selection: cleanup (#2742)
Co-authored-by: Radovan Synek <rsynek@redhat.com>